--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,16 @@
+.navbar {
+  height: 100vh;
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  background-color: aqua;
+  padding-top: 20px;
+  top: 0;
+  left: 0;
+  position: fixed;
+  
+}
+
 .App {
   text-align: center;
 }
