--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -8,15 +8,20 @@
 }
 
 .navbar {
-  height: 100vh;
-  width: 10%;
+  height: 10%;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
-  background-color: aqua;
-  padding-top: 20px;
+  flex-direction: row;
+  background-color: lightgreen;
+  padding: 20px;
   top: 0;
   left: 0;
   position: fixed;
+  line-height: 70px;
+}
+
+.table {
+  background-color: lightskyblue;
 }
 
 @media (prefers-reduced-motion: no-preference) {
