--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -23,13 +23,13 @@ html {
 .navbar {
   height: 10%;
   width: 100vw;
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: row; */
   background-color: rgba(211, 211, 211, 0.623);
-  padding: 150px;
-  top: 0;
+  /* padding: 150px; */
+  /* top: 0;
   left: 0;
-  position: fixed;
+  position: fixed; */
   line-height: 70px;
 }
 
